frontend/test/should_pass/abstract_program__ecore.gm
package _abstractPrograms
{
	node class _Task {
		_name : string;
	}	
}

