frontend/test/should_fail/no_transient_object_in_object.gm
transient class TransObj
{
}

class Obj
{
	tobj:TransObj;
}
